<resources>
    <string name="app_name">Random User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_s_phone_number">Contact Person\'s Phone Number</string>
</resources>